z-index fix

--- a/scss/adaptation/_page2.scss
+++ b/scss/adaptation/_page2.scss
@@ -1,3 +1,11 @@
+@media (max-width: 576px){
+
+    .marquee{
+        z-index: -1;
+    }
+
+}
+
 @media (max-width: 415px) and (max-height: 750px){
     .marquee__item1 {
         bottom: -90px;
